--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "test:api": "node scripts/test-api.js",
+    "test:api:prod": "API_URL=https://your-production-url.com/api/plan node scripts/test-api.js",
+    "test:orchestrate": "node scripts/test-orchestrate.js",
+    "test:orchestrate:prod": "API_URL=https://your-production-url.com node scripts/test-orchestrate.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@prisma/client": "^7.0.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -44,10 +49,12 @@
     "cmdk": "1.0.4",
     "d3": "latest",
     "date-fns": "4.1.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "8.5.1",
     "geist": "latest",
     "immer": "latest",
     "input-otp": "1.4.1",
+    "ioredis": "^5.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
@@ -72,8 +79,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8.5",
+    "prisma": "^7.0.0",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
