--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
+    "test": "node scripts/test-suite.js",
     "test:api": "node scripts/test-api.js",
     "test:api:prod": "API_URL=https://your-production-url.com/api/plan node scripts/test-api.js",
     "test:orchestrate": "node scripts/test-orchestrate.js",
-    "test:orchestrate:prod": "API_URL=https://your-production-url.com node scripts/test-orchestrate.js"
+    "test:orchestrate:prod": "API_URL=https://your-production-url.com node scripts/test-orchestrate.js",
+    "docker:build": "docker build -t data-center-simulator .",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate deploy"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
