Enhance testing and fix Vercel deployment
- Create comprehensive API test suite covering 26+ test cases
- Test all API endpoints: health, plan, orchestrate, scenarios, runs, telemetry
- Include error handling, edge cases, and validation tests
- Fix Vercel deployment by removing secret references from vercel.json
- Add detailed Vercel environment variables setup guide
- Update CI/CD to use comprehensive test suite
- Add test:basic script for quick validation

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -84,10 +84,10 @@ jobs:
           pnpm start &
           sleep 15
         
-      - name: Run API tests
+      - name: Run Comprehensive API tests
         env:
           API_URL: http://localhost:3000
-        run: node scripts/test-suite.js
+        run: node scripts/test-suite-comprehensive.js
 
       - name: Lint check
         run: pnpm lint
