--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "test": "node scripts/test-suite.js",
+    "test": "node scripts/test-suite-comprehensive.js",
+    "test:basic": "node scripts/test-suite.js",
     "test:api": "node scripts/test-api.js",
     "test:api:prod": "API_URL=https://your-production-url.com/api/plan node scripts/test-api.js",
     "test:orchestrate": "node scripts/test-orchestrate.js",
