--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "build:prod": "pnpm prisma generate && next build",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
@@ -18,7 +19,10 @@
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate deploy"
+    "prisma:migrate": "prisma migrate deploy",
+    "db:verify": "node scripts/verify-db-setup.js",
+    "db:setup": "pnpm prisma generate && pnpm prisma migrate deploy",
+    "setup:vercel": "vercel env pull && pnpm db:setup"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
