--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "build:prod": "pnpm prisma generate && next build",
     "dev": "next dev",
-    "lint": "next lint",
+    "lint": "eslint . --ext .js,.ts,.tsx --max-warnings=0",
     "start": "next start",
     "test": "node scripts/test-suite-comprehensive.js",
     "test:basic": "node scripts/test-suite.js",
@@ -69,7 +69,7 @@
     "input-otp": "1.4.1",
     "ioredis": "^5.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.5.4",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "papaparse": "latest",
     "pg": "^8.13.1",
@@ -83,15 +83,17 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "use-sync-external-store": "latest",
-    "vaul": "^0.9.9",
+    "vaul": "^1.1.2",
     "zod": "3.25.76",
     "zustand": "latest"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
     "postcss": "^8.5",
     "prisma": "^7.0.0",
     "tailwindcss": "^4.1.9",
